Tests/CompilerTests/negative/missing-implementation.hylo
//! no-std

trait P {
  fun f0() {}
  fun f1()
  fun f2()
  fun f3()
}

extension Void {
  fun f1() {}
}

given Void: P {
  fun f2() {}
}
