Tests/CompilerTests/negative/missing-implementation.expected
negative/missing-implementation.hylo:12.1-6: error: no implementation of 'f3'
given Void: P {
~~~~~
